namespaces/apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: whoami

spec:
    replicas: 3
    selector:
        matchLabels:
            app: whoami
    template:
        metadata:
            labels:
                app: whoami
        spec:
            containers:
                - name: whoami
                  image: traefik/whoami:v1.10
                  ports:
                      - name: http
                        containerPort: 80
