namespaces/apps/whoami/service.yaml
apiVersion: v1
kind: Service

metadata:
    name: whoami

spec:
    selector:
        app: whoami
    ports:
        - name: http
          port: 80
          targetPort: http
    type: ClusterIP
